# haskell

./: .gitignore
CIS194/: CIS194.cabal
CIS194/app/: Main.hs
CIS194/src/: Helpers.hs  MyLib.hs  Week1.hs  Week2.hs
CIS194/test/: Helpers.hs  Main.hs  Week1Tests.hs  Week2Tests.hs
