cabal-version:      3.0
-- The name of the package.
name:               CIS194

version:            0.1.0.0

license:            NONE

author:             Alexandre Sage

maintainer:         you@example.com

build-type:         Simple

extra-doc-files:    CHANGELOG.md


common warnings
    ghc-options: -Wall

library
    import:           warnings

    exposed-modules:  MyLib, Week1, Week2, Helpers


    build-depends:    
        base ^>=4.17.2.1,
        split ^>=0.2.5,
        text
    hs-source-dirs:   src

    default-language: Haskell2010

executable CIS194
    -- Import common warning flags.
    import:           warnings

    -- .hs or .lhs file containing the Main module.
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:

    -- Other library packages from which modules are imported.
    build-depends:
        base ^>=4.17.2.1,
        CIS194

    -- Directories containing source files.
    hs-source-dirs:   app

    -- Base language which the package is written in.
    default-language: Haskell2010

test-suite CIS194-test
    -- import:           warnings
    default-language: Haskell2010
    other-modules: Week1Tests, Week2Tests,Helpers
    -- other-extensions: Week1
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          Main.hs
    -- Test dependencies.
    build-depends:
        base ^>=4.17.2.1,
        HUnit ^>=1.6.2.0,
        split ^>=0.2.5,
        CIS194
